--- a/Peluş/index.html
+++ b/Peluş/index.html
@@ -40,42 +40,42 @@
         <button class="scroll-left"><i class="fa-solid fa-chevron-left"></i></button>
         <div class="product-container">
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\peluskurt.jpg" alt="Peluş Kurt">
+                <img src="resimler/peluskurt.jpg" alt="Peluş Kurt">
                 <h3>Peluş Kurt</h3>
                 <p>200 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\pelusmidilli.png" alt="Peluş Midilli">
+                <img src="resimler/pelusmidilli.png" alt="Peluş Midilli">
                 <h3>Peluş Midilli</h3>
                 <p>250 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\peluspenguen.jpg" alt="Peluş Penguen">
+                <img src="resimler/peluspenguen.jpg" alt="Peluş Penguen">
                 <h3>Peluş Penguen</h3>
                 <p>300 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\peluspikachu.webp" alt="Peluş Pikachu">
+                <img src="resimler/peluspikachu.webp" alt="Peluş Pikachu">
                 <h3>Peluş Pikachu</h3>
                 <p>300 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\pelustavsan.jpg" alt="Peluş Tavşan">
+                <img src="resimler/pelustavsan.jpg" alt="Peluş Tavşan">
                 <h3>Peluş Tavşan</h3>
                 <p>200 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\pelusayş.jpg" alt="Peluş Ayı">
+                <img src="resimler/pelusayş.jpg" alt="Peluş Ayı">
                 <h3>Peluş Ayı</h3>
                 <p>250 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\peluskedi.jpg" alt="Peluş Kedi">
+                <img src="resimler/peluskedi.jpg" alt="Peluş Kedi">
                 <h3>Peluş Kedi</h3>
                 <p>400 TL</p>
             </div>
             <div class="product-card">
-                <img src="C:\Users\Tarik\OneDrive\Masaüstü\Peluş\resimler\pelusmaymun.jpg" alt="Peluş Maymun">
+                <img src="resimler/pelusmaymun.jpg" alt="Peluş Maymun">
                 <h3>Peluş Maymun</h3>
                 <p>350 TL</p>
             </div>
